--- a/WebApplication12/Views/status/GETChart.cshtml
+++ b/WebApplication12/Views/status/GETChart.cshtml
@@ -5,14 +5,14 @@
 
 @model List<int>
 @section style{
-    <link href="~//assets/css/StyleSheet.css" rel="stylesheet" />
+    <link href="~/assets/css/StyleSheet.css" rel="stylesheet" />
     <link href="../assets/css/Customer.css" rel="stylesheet" />
        <link rel="stylesheet" href="~/assets/css/Customer.css" />
       
 <link rel="stylesheet" href="~/assets/css/status.css" />
 }
 <center>
-    <h1 style="margin-top:100px;"> Sales Details</h1>
+    <h1 style="margin-top:100px;">Sales Details</h1>
 </center>
 <table class="table table-bordered table-hover table-striped x">
 <thead>
@@ -41,7 +41,7 @@
     </tbody>
 </table>
 <div >
-        <a class="btn btn-pill btn-primary y" asp-controller="status" asp-action="Index">Back</a>
+        <a class="btn btn-pill btn-primary y" style="margin-top:610px" asp-controller="status" asp-action="Index">Back</a>
 
 </div>
 
