--- a/WebApplication12/Views/Layout/MainLayout.cshtml
+++ b/WebApplication12/Views/Layout/MainLayout.cshtml
@@ -212,13 +212,13 @@
                                             }
 
                                         </span>
-                                        <small class="text-muted mr-3">appdeveloper</small>
+                                        <small class="text-muted mr-3">User</small>
                                     </div>
                                     <img class="avatar avatar-md brround" src="~/assets/images/users/1.jpg" alt="image">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow w-250">
                                     <div class="user-profile border-bottom p-3">
-                                        <div class="user-image"><img class="user-images" src="~/assets/images/users/1.jpg" alt="image"></div>
+                            <div class="user-image" style="background-color:gray;color:white;width:60px;height:60px;border-radius:50%;font-size:20px;margin-bottom:5px;"><!--<img class="user-images" src="~/assets/images/users/1.jpg" alt="image">--> <P style="margin-top:16px"> @User.Identity.Name.Substring(0,1).ToUpper()</P></div>
                                         <div class="user-details">
 
                                             <p class="mb-1 fs-13 text-muted">
@@ -244,7 +244,11 @@
                                     <a href="#" class="dropdown-item pt-3 pb-3"><i class="dropdown-icon mdi  mdi-message-outline text-primary"></i> Messages <span class="badge badge-pill badge-success">41</span></a>
                                     <a href="#" class="dropdown-item pt-3 pb-3"><i class="dropdown-icon  mdi mdi-settings text-primary"></i> Setting</a>
                                     <a href="#" class="dropdown-item pt-3 pb-3"><i class="dropdown-icon mdi mdi-help-circle-outline text-primary"></i> FAQ</a>
-                                    <a href="#" class="dropdown-item pt-3 pb-3"><i class="dropdown-icon  mdi  mdi-logout-variant text-primary"></i>Sign Out</a>
+                                    <center>
+                                    <form asp-controller="Account" asp-action="Logout" method="post">
+                                <button class="btn btn-pill btn-danger" type="submit">Logout<i class=" fe fe-log-out " style="margin-left:5px;margin-top:2px"></i></button>
+                            </form>
+                            </center>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +261,9 @@
                 <div class="app-sidebar__user">
                     <div class="dropdown user-pro-body text-center">
                         <div class="user-pic">
-                            <img src="~/assets/images/users/1.jpg" alt="user-img" class="avatar-xl rounded-circle mb-1">
+                          <!-- <img src="~/assets/images/users/1.jpg" alt="user-img" class="avatar-xl rounded-circle mb-1">--> 
+                            <div class="user-image" style="background-color:gray;color:white;width:60px;height:60px;border-radius:50%;font-size:20px;margin-bottom:5px;"><!--<img class="user-images" src="~/assets/images/users/1.jpg" alt="image">--> <P style="margin-top:16px"> @User.Identity.Name.Substring(0,1).ToUpper()</P></div>
+
                         </div>
                         <div class="user-info">
                             <h6 class=" mb-0 font-weight-semibold">
@@ -277,7 +283,7 @@
                                     ;
                                 }
                             </h6>
-                            <span class="text-muted app-sidebar__user-name text-sm">App Developer</span>
+                            <span class="text-muted app-sidebar__user-name text-sm">User</span>
                         </div>
                     </div>
                 </div>
@@ -341,15 +347,7 @@
                         <a class="side-menu__item" asp-controller="Report" asp-action="Index"><i class="side-menu__icon fe fe-codepen"></i><span class="side-menu__label">Reports</span></a>
 
                     </li>
-                    <li class="slide" style="margin-top:10px">
-                        <center>
-                            <form asp-controller="Account" asp-action="Logout" method="post">
-                                <button class="btn btn-pill btn-danger" type="submit">Logout<i class=" fe fe-log-out " style="margin-left:5px;margin-top:2px"></i></button>
-                            </form>
-                        </center>
-
-
-                    </li>
+                   
                 </ul>
 
             </aside>
