--- a/WebApplication12/Views/Customer/Details.cshtml
+++ b/WebApplication12/Views/Customer/Details.cshtml
@@ -35,7 +35,7 @@
         <span asp-validation-for="phone" class="text-danger font-weight-bold"></span>
     </div>
     <div class="form-group">
-        <label  class="lb" asp-for="mail"> Email</label>
+        <label  class="lb" asp-for="mail"> outlook mail</label>
         <input type="email"  class="form-control" id="mail" placeholder="Enter mail"  asp-for="mail" disabled>
         <span asp-validation-for="mail" class="text-danger font-weight-bold"></span>
     </div>
