--- a/WebApplication12/Views/Customer/Update.cshtml
+++ b/WebApplication12/Views/Customer/Update.cshtml
@@ -15,7 +15,7 @@
 <form  asp-controller="Customer" asp-action="Update" method="post">
     <input type="hidden" class="form-control" id="name" placeholder="Enter Name" asp-for="mail" name="eemail">
      <input type="hidden" class="form-control" id="name" placeholder="Enter Name" asp-for="phone" name="pphone">
-          <input type="hidden" class="form-control"  placeholder="Enter Name" asp-for="Custo_Id" >
+          <input type="hidden" class="form-control"  placeholder="Enter Name" asp-for="id" >
     <div class="form-group">
         <label class="lb" asp-for="Name">Name</label>
         <input type="Text" class="form-control" id="name" placeholder="Enter Name" asp-for="Name">
