--- a/WebApplication12/Views/MakingOrder/startWork.cshtml
+++ b/WebApplication12/Views/MakingOrder/startWork.cshtml
@@ -37,7 +37,7 @@
     <h1 style="margin-top:100px;">Making Order</h1>
 </center>
 <form>
-    <input type="hidden" asp-for="Custo_Id" id="cust_id" disabled />
+    <input type="hidden" asp-for="id" id="cust_id" disabled />
     <div class="form-group">
         <label class="lb" asp-for="Name">Name</label>
         <input type="Text" class="form-control" id="name" placeholder="Enter Name" asp-for="Name" disabled>
