--- a/WebApplication12/Views/Customer/Delete.cshtml
+++ b/WebApplication12/Views/Customer/Delete.cshtml
@@ -14,8 +14,8 @@
 </center>
 <form  asp-controller="Customer" asp-action="Delete" method="post">
      <div class="form-group">
-        <label class="lb" asp-for="Custo_Id">ID</label>
-        <input type="Text" class="form-control"  placeholder="Enter Name" asp-for="Custo_Id" readonly>
+        <label class="lb" asp-for="id">ID</label>
+        <input type="Text" class="form-control"  placeholder="Enter Name" asp-for="id" readonly>
         
     </div>
     <div class="form-group">
