--- a/WebApplication12/Views/MakingOrder/startWork.cshtml
+++ b/WebApplication12/Views/MakingOrder/startWork.cshtml
@@ -7,6 +7,7 @@
 <link href="../assets/css/Customer.css" rel="stylesheet" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <link rel="stylesheet" href="~/assets/css/branch.css" />
+<link href="~/assets/jquery-editable-select.css" rel="stylesheet">
 
 <style>
 
@@ -109,6 +110,9 @@
 <script src="~/jquery/jquery.js"></script>
 <script src="~/jquery-validation/jquery.validate.js"></script>
 <script src="~/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+   <script src="~/assets/jquery-editable-select.js"></script>
+<script src="~/assets/Select.js"></script>
+    
 <script>
     $(document).ready(function() {
 
