--- a/WebApplication12/Views/Customer/Create.cshtml
+++ b/WebApplication12/Views/Customer/Create.cshtml
@@ -30,7 +30,7 @@
                 <span  class="text-danger font-weight-bold">@ViewBag.phonewarn</span>
     </div>
     <div class="form-group">
-        <label  class="lb" asp-for="mail"> outlook mail</label>
+        <label  class="lb" asp-for="mail"> E-mail</label>
         <input type="email"  class="form-control" id="mail" placeholder="Enter mail"  asp-for="mail">
         <span asp-validation-for="mail"  class="text-danger font-weight-bold" style="margin-right:10px"></span>
          <br />
