--- a/WebApplication12/Views/Account/ForgetPassword.cshtml
+++ b/WebApplication12/Views/Account/ForgetPassword.cshtml
@@ -52,7 +52,12 @@
 								<div class="wrapper wrapper2">
 									<form  class="card-body" asp-controller="Account" asp-action="ForgetPassword" method="post"  tabindex="500">
 										<h2 class="mb-1 font-weight-semibold">Forgot Password</h2>
-										<p class="mb-6"> @ViewBag.x </p>
+
+										<center>
+
+										
+										<h3 class="mb-6 text-danger font-weight-bold m-t-2"> @ViewBag.x </h3>
+										</center>
 										<div class="input-group mb-3">
 											<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
 											<input type="text" class="form-control" placeholder="EmailId" asp-for="mail">
