--- a/WebApplication12/Views/Branch/update.cshtml
+++ b/WebApplication12/Views/Branch/update.cshtml
@@ -15,7 +15,7 @@
 <form  asp-controller="Branch" asp-action="update" method="post">
     <input type="hidden" class="form-control" id="name" placeholder="Enter Name" asp-for="Name" name="nname">
      <input type="hidden" class="form-control" id="name" placeholder="Enter Name" asp-for="Phone" name="pphone">
-          <input type="hidden" class="form-control"  placeholder="Enter Name" asp-for="Branc_Id" >
+    <input type="hidden" class="form-control" placeholder="Enter Name" asp-for="BranchId">
     <div class="form-group">
         <label class="lb" asp-for="Name">Name</label>
         <input type="Text" class="form-control" id="name" placeholder="Enter Name" asp-for="Name">
