--- a/WebApplication12/Views/Branch/Details.cshtml
+++ b/WebApplication12/Views/Branch/Details.cshtml
@@ -18,9 +18,9 @@
           <input type="hidden" class="form-control"  placeholder="Enter Name" asp-for="Branc_Id" >*@
 
            <div class="form-group">
-        <label class="lb" asp-for="Branc_Id">ID</label>
-        <input type="Text" class="form-control" id="name" placeholder="Enter Name" asp-for="Branc_Id" readonly>
-        <span asp-validation-for="Branc_Id" class="text-danger font-weight-bold"></span>
+        <label class="lb" asp-for="BranchId">ID</label>
+        <input type="Text" class="form-control" id="name" placeholder="Enter Name" asp-for="BranchId" readonly>
+        <span asp-validation-for="BranchId" class="text-danger font-weight-bold"></span>
     </div>
        <div class="form-group">
         <label class="lb" asp-for="Name">Name</label>
